--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/BadWaka/BadWaka.github.io#readme",
   "dependencies": {
+    "@tweenjs/tween.js": "^17.1.1",
     "keycode": "^2.1.8",
     "muse-ui": "^2.0.0-rc.5",
     "three": "^0.87.1",
