--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/BadWaka/BadWaka.github.io#readme",
   "dependencies": {
     "@tweenjs/tween.js": "^17.1.1",
+    "express": "^4.16.2",
     "keycode": "^2.1.8",
     "muse-ui": "^2.0.0-rc.5",
     "pixi.js": "^4.5.6",
