--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "keycode": "^2.1.8",
     "muse-ui": "^2.0.0-rc.5",
     "pixi.js": "^4.5.6",
+    "swiper": "^4.0.3",
     "three": "^0.87.1",
     "vue": "^2.4.4"
   },
