--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   "homepage": "https://github.com/BadWaka/BadWaka.github.io#readme",
   "dependencies": {
     "@tweenjs/tween.js": "^17.1.1",
+    "axios": "^0.17.0",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
     "keycode": "^2.1.8",
     "muse-ui": "^2.0.0-rc.5",
     "pixi.js": "^4.5.6",
     "swiper": "^4.0.3",
     "three": "^0.87.1",
+    "tracer": "^0.8.11",
     "vue": "^2.4.4"
   },
   "devDependencies": {
