--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tweenjs/tween.js": "^17.1.1",
     "axios": "^0.17.0",
     "cheerio": "^1.0.0-rc.2",
+    "element-ui": "^2.0.4",
     "express": "^4.16.2",
     "keycode": "^2.1.8",
     "muse-ui": "^2.0.0-rc.5",
