--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.2.3",
+    "body-parser": "^2.0.0-beta.2",
+    "express": "^5.0.0-beta.2",
+    "jsonwebtoken": "^9.0.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.21"
   },
